# examples

./: .drone.yml  sonar-project.properties
c-cpp/: af_free.c  atoi.c  boost_test.cc  cidr.c  door.c  dvnet.cc  encrypt.c  ioctl_stdin.c  libevent_stdin.c  memmove-buffer.c  network.c  procname.c  readline.c  stat.c
c-cpp/circ/: .gitignore  Makefile  circ.c  circ.h
c-cpp/dlopen/: compile  dlopen.cc  dlopen.h  dlopen_lib.cc
c-cpp/dlopen2/: compile  dlopen.cc  dlopen.h  dlopen_lib.cc
c-cpp/onethread/: eggnet.h  network.c  onethread.c  sockbuf.h  socket.c  unbuf.c
c-cpp/sqlite/: main.c  the.db
c-cpp/sqlite3/: compile  main.c  test.db
c-cpp/tcl/: compile  example.tcl  example_tcl.c  example_tcl.cc
c-cpp/xml.csharp/: Xml.Example.csproj
csharp/XmlExample/: Loader.cs  Xml.Example.sln  XmlHandler.cs
groovy/: mixins.groovy
hg/: svn-hg.sh
java/: CommaAssignment.java  EqualString.java  HelloWorld.java  PassByReference.java  ReadChar.java  ShowProperties.java
java/sekure/: README  build.xml
java/w0nk/: lzw.java
ocaml/: hilo.ml  template.in  template.ml
onethread/: Makefile  client.c  memutil.c  memutil.h  multiserv.c  network.h  sockbuf.c  telnet.c  telnet.h
osx/: itunes_library_check.rb  secure_image.sh
other/: binaryboy-template_function.txt  bysin_cidr.c  larne-tree_example.cc  pm.c  udpfwd.c  xres.c
perl/: block.pl  carptest.pl
python/: decorators.py
ruby/: add-ip6.rb  defer.rb  dsl_fun.rb  mixins.rb
ruby/drb/: client.rb  mymod.rb  service.rb
ruby/em-tls/: client.rb  server.rb
rust/: .gitignore  README.md
rust/bincrypt/: Cargo.toml  README.md
rust/bincrypt/src/: bincrypt.rs  conf.rs  main.rs
rust/capnp-fun/: Cargo.toml  build.rs  proto.capnp
rust/chat/: Cargo.toml
rust/h2-fun/: Cargo.toml
rust/simplekv/: .gitignore  Cargo.toml
rust/simplekv/src/: main.rs
shell/: getpass.sh  git_cleaner.sh  unpack_movies.sh
tcl/: config.tcl  modloader.tcl  namespace_source.tcl  xtreme-notify.tcl
(+33 files in other folders)
