[package]
name = "bincrypt"
version = "0.1.0"
authors = ["Zachery Hostens <zacheryph@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
bincode = "1.2.1"
goblin = "0.2.3"
gumdrop = "0.8.0"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.55"
base64 = "0.12.2"
ahash = "0.3.8"
