[package]
name = "simplekv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.3", features = ["http2", "ws", "tracing"] }
bincode = "1.3.3"
bytes = "1.5.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sled = { version = "0.34.7", features = ["compression"] }
tokio = { version = "1.35.1", features = ["full", "tracing"] }
